--- a/React para iniciante/React Basico/index.html
+++ b/React para iniciante/React Basico/index.html
@@ -31,12 +31,8 @@
         return (
           <nav>
             <ul>
-              <li>
-                <a href="#">Link 1</a>
-              </li>
-              <li>
-                <a href="#">Link 2</a>
-              </li>
+              <li><a href="#">Link 1</a></li>
+              <li><a href="#">Link 2</a></li>
             </ul>
           </nav>
         );
