adição de um comentario explicando a function

--- a/React para iniciante/React Basico/index.html
+++ b/React para iniciante/React Basico/index.html
@@ -59,6 +59,7 @@
       };
 
       const Compras = () => {
+        // useState é um hook que define uma variável reativa
         const [count, setCount] = React.useState(5);
 
         function handleClick() {
