--- a/React-hooks/desafio-useState/index.html
+++ b/React-hooks/desafio-useState/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>UseState</title>
+    <title>Desafio useState</title>
     <link rel="stylesheet" href="./style.css">
   </head>
   <body>
